--- a/src/markdown/mas/data_validatie_2023.Rmd
+++ b/src/markdown/mas/data_validatie_2023.Rmd
@@ -143,3 +143,34 @@ buiten_telperiodes %>%
 ```
 
 Dit zijn punten die niet binnen het MAS pilootproject lijken te vallen.
+
+
+# 2) Binnen tijdsspanne zonsopgang
+
+De data bevat geen info over precieze tijdstippen van tellingen, enkel datums.
+
+# 3) Typfouten in aantallen
+
+```{r}
+mas_telperiodes %>%
+  st_drop_geometry() %>%
+  count(aantal, name = "aantal keer in dataset") %>%
+  rename("aantal vogels" = aantal) %>%
+  kable()
+```
+
+We zien niet zoveel aantallen boven de 40.
+We tonen deze gevallen apart:
+
+```{r}
+mas_telperiodes %>%
+  st_drop_geometry() %>%
+  select(aantal, naam, plotnaam, waarnemer = waarneme, datum) %>%
+  filter(aantal > 40) %>%
+  arrange(aantal) %>%
+  kable()
+```
+
+We zien veel soorten die wel in grote groepen kunnen voorkomen zoals ganzen, spreeuwen, roeken, meeuwen ...
+In de hoogste gevallen worden wel veel Vinken (eens 180, 200, 500) gezien en ook veel holenduiven (600, 1600).
+Is dit geloofwaardig?
