--- a/src/markdown/mas/overlap_bo_hfdtlten.Rmd
+++ b/src/markdown/mas/overlap_bo_hfdtlten.Rmd
@@ -59,16 +59,19 @@ for (y in 2017:2023) {
 
 # Overlappen
 
+Voor de verzamelaanvragen van 2017 tot 2023 kijken we welke hoofdteelten overlappen met de kaartlaag met beheerovereenkomsten van VLM.
+Per groep berekenen we de oppervlakte van de polygoon.
+
 ```{r}
 for (y in 2017:2023) {
   intersect_df <- st_intersection(bo_2022, get(paste("verzamelaanvraag", y,
                                                      sep = "_")))
   out <- intersect_df %>%
-    mutate(area = units::drop_units(st_area(geometry))) %>%
+    mutate(oppervlakte = units::drop_units(st_area(geometry))) %>%
     st_drop_geometry() %>%
-    select(BH_DOELST, GWSNAM_H, area) %>%
+    select(BH_DOELST, GWSNAM_H, oppervlakte) %>%
     group_by(BH_DOELST, GWSNAM_H) %>%
-    summarise(area = sum(area),
+    summarise(oppervlakte = sum(oppervlakte),
               .groups = "drop") 
   
   assign(paste("df", y, sep = "_"), out)
@@ -79,17 +82,17 @@ df <- bind_rows(
 )
 ```
 
-Alle hoofdteelten.
+We beschouwen overlap met alle hoofdteelten en kijken naar de 20 hoofdteelten die meest overlappen met elke beheerdoelstelling.
 
 ```{r}
 for (doelst in unique(df$BH_DOELST)) {
   p <- df %>%
     filter(BH_DOELST == doelst) %>%
-    mutate(GWSNAM_H = reorder(GWSNAM_H, -area)) %>%
+    mutate(GWSNAM_H = reorder(GWSNAM_H, -oppervlakte)) %>%
     arrange(GWSNAM_H) %>%
     head(20) %>%
     ungroup() %>%
-    ggplot(aes(x = GWSNAM_H, y = area)) +
+    ggplot(aes(x = GWSNAM_H, y = oppervlakte)) +
       geom_bar(stat = "identity") +
       labs(x = "", title = doelst) +
       theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
@@ -97,7 +100,7 @@ for (doelst in unique(df$BH_DOELST)) {
 }
 ```
 
-Hoofdteelten die iets met beheer te maken hebben.
+Nu beschouwen we enkel hoofdteelten die iets met beheer te maken hebben.
 
 ```{r}
 beheerovereenkomsten <- c("Bloemenmengsel",
@@ -115,8 +118,8 @@ for (doelst in unique(df$BH_DOELST)) {
            GWSNAM_H %in% beheerovereenkomsten) %>%
     mutate(GWSNAM_H = factor(GWSNAM_H,
                              levels = beheerovereenkomsten),
-           GWSNAM_H = reorder(GWSNAM_H, -area)) %>%
-    ggplot(aes(x = GWSNAM_H, y = area)) +
+           GWSNAM_H = reorder(GWSNAM_H, -oppervlakte)) %>%
+    ggplot(aes(x = GWSNAM_H, y = oppervlakte)) +
       geom_bar(stat = "identity") +
       scale_x_discrete(drop = FALSE) +
       labs(x = "", title = doelst) +
